kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: iscander61/nginx:otus
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        volumeMounts:
          - name: app
            mountPath: /app
      volumes:
        - name: app
          emptyDir: { }
